--- a/Pengguna/app/src/main/res/layout/activity_gtaw.xml
+++ b/Pengguna/app/src/main/res/layout/activity_gtaw.xml
@@ -270,6 +270,9 @@
         android:layout_marginBottom="80dp"
         android:backgroundTint="@android:color/white"
         android:ems="10"
+        android:clickable="true"
+        android:focusable="false"
+        android:importantForAutofill="no"
         android:hint="Alamat"
         android:inputType="textPersonName"
         android:textColor="@android:color/white"
