--- a/Welder/app/src/main/res/layout/activity_verif.xml
+++ b/Welder/app/src/main/res/layout/activity_verif.xml
@@ -262,7 +262,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
-        <de.hdodenhof.circleimageview.CircleImageView
+        <ImageView
             android:id="@+id/profile"
             android:layout_width="100sp"
             android:layout_height="100sp"
