--- a/Pengguna/app/src/main/res/layout/activity_fcaw.xml
+++ b/Pengguna/app/src/main/res/layout/activity_fcaw.xml
@@ -312,6 +312,9 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="80dp"
         android:backgroundTint="@android:color/white"
+        android:clickable="true"
+        android:focusable="false"
+        android:importantForAutofill="no"
         android:ems="10"
         android:hint="Alamat"
         android:inputType="textPersonName"
