--- a/Pengguna/app/src/main/res/layout/activity_maps.xml
+++ b/Pengguna/app/src/main/res/layout/activity_maps.xml
@@ -17,7 +17,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="4"
-            android:hint="Search Location Here" />
+            android:hint="Search Location Here"
+            android:inputType="textPersonName" />
 
 
         <Button
