--- a/Pengguna/app/src/main/res/layout/activity_smfcaw.xml
+++ b/Pengguna/app/src/main/res/layout/activity_smfcaw.xml
@@ -215,6 +215,9 @@
         android:backgroundTint="@android:color/white"
         android:ems="10"
         android:hint="Alamat"
+        android:clickable="true"
+        android:focusable="false"
+        android:importantForAutofill="no"
         android:inputType="textPersonName"
         android:textColor="@android:color/white"
         android:textColorHint="@android:color/white"
