--- a/Admin/app/src/main/res/layout/jenis_list.xml
+++ b/Admin/app/src/main/res/layout/jenis_list.xml
@@ -32,6 +32,20 @@
             android:textColor="@android:color/black"
             android:textSize="11sp" />
 
+        <TextView
+            android:id="@+id/textView22"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="TextView"
+            android:textColor="@android:color/black" />
+
+        <TextView
+            android:id="@+id/textView86"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="TextView"
+            android:textColor="@android:color/black" />
+
     </LinearLayout>
 
     <Button
