--- a/Admin/app/src/main/res/layout/jenis_list.xml
+++ b/Admin/app/src/main/res/layout/jenis_list.xml
@@ -6,7 +6,7 @@
     android:padding="16dp">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
