--- a/Pengguna/app/src/main/res/layout/activity_smgtaw.xml
+++ b/Pengguna/app/src/main/res/layout/activity_smgtaw.xml
@@ -12,10 +12,10 @@
         android:id="@+id/textView49"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
         android:text="@string/smaw_gtaw"
         android:textColor="@android:color/white"
         android:textSize="30sp"
-        app:layout_constraintBottom_toTopOf="@+id/frameLayout10"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
@@ -25,7 +25,7 @@
         android:id="@+id/frameLayout8"
         android:layout_width="330dp"
         android:layout_height="100dp"
-        android:layout_marginBottom="70dp"
+        android:layout_marginBottom="100dp"
         android:background="@drawable/buttton2"
         app:layout_constraintBottom_toTopOf="@+id/editText17"
         app:layout_constraintEnd_toEndOf="parent"
@@ -197,7 +197,7 @@
         android:id="@+id/frameLayout9"
         android:layout_width="330sp"
         android:layout_height="100sp"
-        android:layout_marginBottom="70dp"
+        android:layout_marginBottom="100dp"
         android:background="@drawable/buttton2"
         app:layout_constraintBottom_toTopOf="@+id/editText17"
         app:layout_constraintEnd_toEndOf="parent"
@@ -303,7 +303,7 @@
         android:id="@+id/frameLayout19"
         android:layout_width="330sp"
         android:layout_height="100sp"
-        android:layout_marginBottom="70dp"
+        android:layout_marginBottom="100dp"
         android:background="@drawable/buttton2"
         app:layout_constraintBottom_toTopOf="@+id/editText18"
         app:layout_constraintEnd_toEndOf="parent"
